<resources>
    <string name="app_name">Gadgeothek</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="here">here</string>
    <string name="register_text_before">No account? Click </string>
    <string name="register_text_after"> to Register</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="matriculation_number">Matriculation number</string>
    <string name="street_name">Street</string>
    <string name="street_number">Number</string>
    <string name="zip_code">Zip code</string>
    <string name="city_name">City</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm password</string>
</resources>
